# demos

./: .env  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  LICENSE.md  Procfile  README.md  init-schema.csv  package-lock.json  package.json  requirements.txt  run.sh  vue.config.js
.github/workflows/: gh-pages-actions.yml  push-dataset.yml
app/: feed_meilisearch.rb
app/front/: application-153267ba85a057faee9e6d93954a0f7185e90bd395f5375b.css  index.html  insights.js  search.css  search.js  track.js
app/meilisearch/: feed_meilisearch.rb  parse_dump_file.rb  stats.rb
data_collector/: collector.py  conf.py
data_collector/bigquery_pypi/: bigquery_pypi.py
data_collector/meili/: meili_index.py
data_collector/pypi/: pypi.py
docs/: CNAME  css.css  index.html  search.css  search.js
docs/css/: style.css
docs/js/: index.js  main.js
docs/src/: index.css  js  style.css  warehouse.css
finding-rubygems/meilisearch/: feed_meilisearch.rb
meilisearch/: app.rb  download_postgresql_dump.sh  feed_meilisearch.rb  parse_dump_file.rb  stats.rb
process/: demo_update_ process.md
process/css-styleguide/: README.md  default.css  spacing.css
process/css-theme/: README.md  default.css
setup/: download-dataset.sh  launchMeili.js  package.json  setup.js  setup.unit.test.js
src/: App.vue  lib.rs  main.js  main.rs  meilisearch-client.js
src/MoMA/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
src/ecommerce/: .editorconfig  .env  .env.template  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .prettierrc.json  LICENCE  README.md  bors.toml  next.config.js  package.json
src/federated-search/: .env.example  .eslintrc.json  README.md  package.json
src/finding-crates/: .gitignore  Cargo.toml  README.md  run.sh
src/finding-pypi/: .gitignore  CNAME  README.md  requirements.txt
src/finding-rubygems/: .editorconfig  .gitignore  Gemfile  README.md
src/gatsby-plugin-guide/: README.md
src/geo-javascript/: .eslintrc.js  index.html  package.json
src/matching-strategy/: .env  .eslintrc.json  (+3 more)
(+226 files in other folders)
