[package]
name = "meili-crates"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99.6"
cargo_toml = "0.8.0"
flate2 = "1.0.11"
futures-preview = "0.3.0-alpha.14"
futures-timer = "0.4.0"
runtime = "0.3.0-alpha.7"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
tar = "0.4.26"
walkdir = "2.0"

[dependencies.surf]
git = "https://github.com/badboy/surf.git"
branch = "hyper-client"
default-features = false
features = ["hyper-client"]

[dependencies.surf-curl]
package = "surf"
git = "https://github.com/rustasync/surf.git"
branch = "master"
